[tool.poetry]
name = "adventofcode-2018"
version = "0.1.0"
description = ""
authors = ["Meir <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.8.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
